--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Todo-list</title>
 </head>
 <body>
-    
+    <main class="main">
+      <section class="todo-input-block">
+        <input type="text" class="todo-input-block__input">
+        <button class="todo-input-block__button">Add new ToDo</button>
+      </section>    
+      <section class="todo-list">
+        <ul class="list-container"></ul>
+      </section>    
+    </main>
 </body>
 </html>
