--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="./src/script/main.js" defer></script>
-    <link rel="stylesheet" href="./src/assets/main.css">
+    <link rel="stylesheet" href="./src/style/main.css">
     <title>Todo-list</title>
 </head>
 <body>
