add styles for app

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main class="main">
       <section class="todo-input-block">
-        <input type="text" class="todo-input-block__input">
+        <input type="text" class="todo-input-block__input" placeholder="Enter new todo...">
         <button class="todo-input-block__button">Add new ToDo</button>
       </section>
       <section class="todo-list">
