fix styles and add all checked and all remove methods

--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
       <section class="todo-input-block">
         <input type="text" class="todo-input-block__input" placeholder="Enter new todo...">
         <button class="todo-input-block__button">Add new ToDo</button>
+        <div class="todo-input-block__filters-wrapper"></div>
       </section>
       <section class="todo-list">
+        <div class="todo-list__manipulation-block">
+          <div class="manipulation-block__check-all">
+            <input type="checkbox" class="manipulation-block__checkbox">
+            <span class="manipulation-block__checkbox-label">Check all</span>
+          </div>
+          <div class="manipulation-block__remove-selected">
+            <button class="manipulation-block__remove-selected-button">Remove selected &#10060;</button>
+          </div>
+        </div>
         <ul class="list-container"></ul>
       </section>
     </main>
